--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,8 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="%sveltekit.assets%/style/reset.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/style/root.css" />
-		<link rel="stylesheet" href="%sveltekit.assets%/style/header.css" />
-		<link rel="stylesheet" href="%sveltekit.assets%/style/footer.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/global.css" />
+		<link href="https://fonts.googleapis.com/css?family=Geologica:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Mukta:200,300,regular,500,600,700,800"
 			rel="stylesheet"
@@ -15,6 +15,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: flex; flex: content">%sveltekit.body%</div>
+		<div class="wrapper"">%sveltekit.body%</div>
 	</body>
 </html>
