--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div class="wrapper"">%sveltekit.body%</div>
+		<div class="wrapper" style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
