--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<link rel="stylesheet" href="%sveltekit.assets%/style/reset.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/style/root.css" />
 		<link rel="stylesheet" href="%sveltekit.assets%/style/global.css" />
